- new 'connect' and 'disconnect' messages on the signal node
- a slave can have several masters
- no more side effects for synchronized objects (position change, scaling)
- some modifications on examples (Turenas and cursors) have been made : some settings of scale were 
in fact done to avoid side-effects that don't exist anymore.

----------------------------------------------------
Version 1.07
- bug with 'line' initialization corrected: wrong position and orientation with negative coordinates.
- new 'plugins' static node at application level to provide a user path to look for pugins.
- explicit objects for musicxml scores ('musicxml' and 'musicxmlf' types)
- new 'faustdsp' object, charging libfaust as a plugin to compile faust DSP on-the-fly. 
- exception catched when sending osc messages: was a potential crash, 
  e.g. in case of 'get' message sent to a signal with a large buffer -> out of buffer memory
- new javascript 'post' function for posting delayed messages
- new 'write' method supported by the 'log' window
- variable addresses are evaluated in message based variables
- support relative rotations on x and y axis

----------------------------------------------------
Version 1.06
- 'save' message can now take an optional list of attributes to be saved
- variables are now evaluated and expanded inside strings. 
  Thus interaction variables can now be passed as argument of javascript functions.
- corrects musicxml-version output
- log window is put to front when the show menu is recalled
- an object alias is removed when the object is deleted

----------------------------------------------------
Version 1.05 - 2014-02-17
- incorrect error message for watch messages corrected
- new javascript 'readfile' function
- log window is now available from the application menu
- brushStyle attribute added
- new 'layer' object (default brushStyle = none)
- new 'save' method specific to the log window: saves the log window content to a file